--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         />
         <link rel="stylesheet" href="style.css">
 <body>
+
+    <h2>Titulo</h2>
     <!-- Header -->
     <header class="bg-primary text-white text-center py-3" id="cabecera">
         <h1>Deportes Hoy</h1>
